--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 <button onclick="increaseValue('shower-time')">+</button>
                             </div>
 
-                            <label class="centered-label">¿Cuántos minutos dejas abierto el grifo del baño?</label>
+                            <label class="centered-label">¿Cuántos minutos dejas abierto el caño del baño?</label>
                             <div class="input-group">
                                 <button onclick="decreaseValue('bath-tap-time')">-</button>
                                 <input type="number" id="bath-tap-time" value="1">
@@ -44,7 +44,7 @@
                             </div>
 
                             <div class="question">
-                                <label class="centered-label">¿Cuántos minutos dejas abierto el grifo de la cocina?</label>
+                                <label class="centered-label">¿Cuántos minutos dejas abierto el caño de la cocina?</label>
                                 <div class="input-group">
                                     <button onclick="decreaseValue('kitchen-tap-time')">-</button>
                                     <input type="number" id="kitchen-tap-time" value="1">
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="question">
-                            <label class="centered-label">¿Cuántas veces friegas a mano a la semana?</label>
+                            <label class="centered-label">¿Cuántas veces lavas a mano a la semana?</label>
                             <div class="input-group">
                                 <button onclick="decreaseValue('handwashing-times')">-</button>
                                 <input type="number" id="handwashing-times" value="0">
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                         <div class="question">
-                            <label class="centered-label">¿Cuántas lavadoras pones a la semana?</label>
+                            <label class="centered-label">¿Cuántas veces usas la lavadoras a la semana?</label>
                             <div class="input-group">
                                 <button onclick="decreaseValue('laundry-times')">-</button>
                                 <input type="number" id="laundry-times" value="0">
@@ -131,7 +131,7 @@
                     <div id="section4" style="display:none;">
                         <h2 class="centered-label large-text">Transporte</h2>
                         <div class="question">
-                            <label class="centered-label">¿Tienes coche?</label>
+                            <label class="centered-label">¿Tienes carro?</label>
                             <div class="input-group">
                                 <input type="radio" id="has-car-yes" name="has-car" value="Sí">
                                 <label for="has-car-yes">Sí</label><br>
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                         <div class="question">
-                            <label class="centered-label">¿Cuántas veces lavas tu coche al mes?</label>
+                            <label class="centered-label">¿Cuántas veces lavas tu carro al mes?</label>
                             <div class="input-group">
                                 <button onclick="decreaseValue('car-wash-times')">-</button>
                                 <input type="number" id="car-wash-times" value="0">
